# legacy-ChessGameTXT

./: CMakeLists.txt  README.md
src/: Bishop.cpp  Bishop.h  Board.cpp  Board.h  ChessText.cpp  FatalErrorException.cpp  FatalErrorException.h  GameState.cpp  GameState.h  Highlight.AnimSheet  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Player.cpp  Player.h  Pos.cpp  Pos.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  Square.cpp  Square.h  piece.cpp  piece.h  pieceID.cpp  pieceID.h
